syntax = "proto3";

package registry;

service RegistryService {
  rpc RegisterService (ServiceInfo) returns (RegisterResponse);
  rpc ListServices (Empty) returns (ServiceList);
}

message ServiceInfo {
  string name = 1;
  string address = 2;
}

message RegisterResponse {
  string status = 1;
}

message Empty {}

message ServiceList {
  repeated ServiceInfo services = 1;
}
